--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,7 +6,9 @@
             "email": "kamil.halasa7@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "firebase/php-jwt": "^6.10"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
