--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "dompdf/dompdf": "^2.0"
     },
     "autoload": {
         "psr-4": {
