pdf + qr services

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "firebase/php-jwt": "^6.10",
-        "dompdf/dompdf": "^2.0"
+        "dompdf/dompdf": "^2.0",
+        "bacon/bacon-qr-code": "^2.0"
     },
     "autoload": {
         "psr-4": {
