--- a/.docker/nginx/conf.d/default.conf
+++ b/.docker/nginx/conf.d/default.conf
@@ -6,12 +6,12 @@ server {
     location ~ \.php$ {
        fastcgi_pass   app:9000;
        fastcgi_index  index.php;
-       fastcgi_param REQUEST_METHOD $request_method;
        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
        include        fastcgi_params;
+       add_header Allow "GET, POST, OPTIONS";
     }
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri /index.php?$query_string;
     }
 }
